INTER-Mediator Change Log
by Masayuki Nii
msyk@msyk.net

http://inter-mediator.com/
Change Log will be supplied by English only.

=================================
To Do, that is left-over. Or Plan
=================================

To Do List for the INTER-Mediator developer(s)
- Documentations, especially English documentations.
- Working with the cloud infrastructures.
- Generating the page on the server-side initially. Now the IMCake is going on.
- The definition file editor which is working on the server side.
- Client-side evaluated field as like FileMaker's calculation field.
- The list-detail style page navigation without JavaScript programming.
- Check the schema as far as the field name.
- Showing as the alert box when any errors occurred ??
- Password policy when the password is changed.
- Supports HTML5's datalist tag elements
- Server side processing with Ruby on Rails or kind of.
- Single query can retrieve main and related tables simultaneously.
- Caching the result of queries.
- FileMaker's Find style database search. To do that, the Record-set feature must be support for context.
- Store NULL for empty string.
- HTML5's local database supporting.
- Amazon Web Service supporting.
- Searching in PDFs or any kind of files.
- Popup menu's default value; if there isn't the value of them, set first one.
- PayPal support or sort of.

=================================
Known Issues for Browsers:
=================================
Internet Explorer 7
- Checkbox and Radio Button doesn't work. Oops! I won't fix it (I can't!).

Internet Explorer 6 or under are NOT supported!
FireFox/Safari/Chrome/Opera will work fine as for HTML5 supported version.
It's hard to check all versions above browsers as you know. I hope you understand.

=================================
Change Log
=================================

Ver.3.8
- $scriptPathPrefix and $scriptPathSufix in params.php are obsoleted. Use $callURL to specify the url directly.