@@ -2173,7 +2173,7 @@ var INTERMediator = {
                 cNode.style.fontSize = '7pt';
                 aNode = document.createElement('a');
                 aNode.appendChild(document.createTextNode('INTER-Mediator'));
-                aNode.setAttribute('href', 'http://inter-mediator.info/');
+                aNode.setAttribute('href', 'http://inter-mediator.org/');
                 aNode.setAttribute('target', '_href');
                 spNode.appendChild(document.createTextNode('Generated by '));
                 spNode.appendChild(aNode);
