@@ -40,8 +40,7 @@
                 <!--<input type="text" class="IM[assetdetail@category]"/>-->
                 <!--After Modification1: Modification for page elements-->
                 <select class="IM[assetdetail@category]">
-                    <option value="個人用">個人用</option>
-                    <option value="共用">共用</option>
+                    <option class="IM[category@category_id@value|category@name]" value=""></option>
                 </select>
                 <!--After Modification1:-->
             </td>
