@@ -24,7 +24,7 @@ IM_Entry(
             // Three definitions below will NOT be specified simultaneously. Here is a demo. Try with commented any lines.
             'post-reconstruct' => true,
             'post-dismiss-message' => '送信したんだもーん',
-            'post-move-url' => 'http://inter-mediator.info/',
+            'post-move-url' => 'http://inter-mediator.org/',
         ),
     ),
     array(
