@@ -21,7 +21,7 @@
 
 <p>by Masayuki Nii msyk@msyk.net Copyright (c) 2009-2012 Masayuki Nii, All rights reserved.</p>
 
-<p>Please access web site <a href="http://inter-mediator.info">http://inter-mediator.info</a> to get details.
+<p>Please access web site <a href="http://inter-mediator.org">http://inter-mediator.org</a> to get details.
     This page is for to access easily to sample pages.</p>
 <table>
     <tr>
@@ -57,7 +57,7 @@
     </tr>
     <tr>
         <td>Asset Management Sample</td>
-        <td><a href="Sample_invoice/invoice_MySQL.html">show</a></td>
+        <td><a href="Sample_Asset/asset_list.html">show</a></td>
         <td></td>
         <td></td>
         <td></td>
