@@ -4,12 +4,12 @@ msyk@msyk.net
 
 Thanks for your interest of this software.
 All information will be shown at:
-http://inter-mediator.info
+http://inter-mediator.com
 
 Sample pages with this archived file are published at below.
 You don't have to deploy the samples if you just want to just a glance.
 
-http://inter-mediator.info/im-sample.html
+http://msyk.dyndns.org/develop-im/
 
 ===========================
 Acknowledgement
