@@ -2,7 +2,7 @@ INTER-Mediator Change Log
 by Masayuki Nii
 msyk@msyk.net
 
-http://inter-mediator.com/
+http://inter-mediator.org/
 Change Log will be supplied by English only.
 
 =================================
@@ -30,6 +30,12 @@ To Do List for the INTER-Mediator developer(s)
 - Searching in PDFs or any kind of files.
 - Popup menu's default value; if there isn't the value of them, set first one.
 - PayPal support or sort of.
+ (Followings are from INTER-Mediator Study Meeting 2003#1)
+- Customizable Navigation Bar.
+- Calendar Component Support.
+- Tab Component Support.
+- Operating the issuedhash table with SQLite db on the server.
+- [BUG] The field for radio buttons reports "Anyone changed this field" message.
 
 =================================
 Known Issues for Browsers:
@@ -51,6 +57,7 @@ Ver.3.8
 - [BUG FIX] "Insert" button for SPAN/DIV repeaters didn't appear.
 - Some exceptions prints a stack trace to JavaScript console if possible.
 - The default timezone can be customized with the variable $defaultTimezone in the params.php file.
+- PDO Test cases for each database engine.
 
 Ver.3.7 (2013/7/28)
 - Check required PHP extensions (mbstring and OpenSSL), especially on Windows.
